[package]
name = "lookout"
version = "0.1.0"
authors = ["Zach Schuermann <zachary.zvs@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"
regex = "1"
once_cell = "1.5.2"
twilio = "1.0.0"
futures = "0.3.8"
scraper = "0.12.0"
surf = "2.1.0"
chrono = "0.4"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

# use unstable for delay, tokio for Twilio
[dependencies.async-std]
version = "1.7.0"
features = ["unstable", "attributes", "tokio02"]
